# Blog_Rust_Final_Project

./: .gitignore  Readme.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs
backend/src/models/: log.rs  mod.rs  post.rs  user.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Navbar.js
frontend/src/pages/: CreatePost.js  EditPost.js  Home.js  Login.js  PostDetail.js  PostsList.js  Register.js  UserPostsList.js
migrations/2025-01-01-154301_create_users_and_posts/: down.sql  up.sql
