[package]
name = "Blog_Rust_Final_Project"
version = "0.1.0"
edition = "2021"

# bin is the entry point for `cargo run` or `cargo build`
[[bin]]
name = "Blog_Rust_Final_Project"
path = "src/main.rs"

[dependencies]
# Server
actix-web = "4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"

# Database
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }

# Environment variables
dotenv = "0.15.0"

# Password hashing
bcrypt = "0.16.0"

# Logging
env_logger = "0.11.6"

jsonwebtoken = "9.3.0"  
chrono = "0.4"
futures = "0.3"